# rust-fateservantcreator

./: Cargo.toml  README.md
servants/: Archer_EMIYA.svt  Saver_Yeshua.svt  Tester_Test.svt
src/: lib.rs  main.rs  servant.rs  servant_fs.rs
