[package]
name = "fateservant"
version = "0.1.1"
authors = ["https://github.com/kaubu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
glob = "0.3.0"